fix(ueia): make canonical fixtures java-compat conservative